--- a/Page_2.html
+++ b/Page_2.html
@@ -2,7 +2,6 @@
 	<head>
 		<title>Les Portes Et Les Slaloms</title>
 		<h1>Bienvenue dans la catégorie Ski/Slaloms.</h1>
-		<script src=slalom.js type= "text/javascript"> </script>
 	</head>
 	<body>
 		<p> Le ski, un sport d'hiver si connue et star des montagnes, cette période où on dévale nos descentes. Mais qui dit ski, dit aussi concours, et qu'elle est le lien entre le ski et les portes ? LE SLALOM. Donc dans cette partie, on ira voir les portes des slaloms. Enfilez vos ski et partons à la découverte.</p>
@@ -16,3 +15,6 @@
 	<p>Un parcours est tracé en posant une série de portes, matérialisées par des paires de piquets rouges et bleus. Le skieur doit passer entre les deux piquets formant la porte, avec l'obligation d'avoir les spatules des skis et les pieds passant entre les piquets. Une course comporte de 55 à 75 portes pour les hommes et de 40 à 60 portes pour les femmes. Le dénivelé est de 180 à 220 mètres pour les hommes, légèrement moins pour les femmes. Selon la disposition des portes, la difficulté du tracé peut considérablement augmenter.</p>
 	<br>
 	<p>Pour éviter que les canditats se blessent, les piquets doivent être flexible vu qu'ils vont exécuter des virages très serrés. Ils so t aussi équiper de protections, notamment comme des protèges-tibias, des protèges-mains et des casques.</p>
+	<button>
+		<a href="slalom.html">MiniGame ( Have Fun :D )</a>
+	</button>
